--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,8 +11,8 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
-        jsonschema-version: ["3.0", "latest"]
-    name: py ${{ matrix.python-version }} js ${{ matrix.jsonschema-version }}
+        required-dependencies: ["minimum", "latest"]
+    name: py ${{ matrix.python-version }} js ${{ matrix.required-dependencies }}
     steps:
       - uses: actions/checkout@v5
       - name: Set up Python ${{ matrix.python-version }}
@@ -26,9 +26,10 @@ jobs:
 
       - name: Install specific jsonschema
         # Only have to execute this if we don't want the latest jsonschema version
-        if: ${{ matrix.jsonschema-version != 'latest' }}
+        if: ${{ matrix.required-dependencies != 'latest' }}
         run: |
-          uv pip install jsonschema==${{ matrix.jsonschema-version }}
+          # Keep in sync with versions in `pyproject.toml`
+          uv pip install jsonschema==3.0 narwhals==1.27.1 typing_extensions==4.10.0
       - name: Maybe uninstall optional dependencies
         # We uninstall pyarrow and vegafusion for one job to test that we have not
         # accidentally introduced a hard dependency on these libraries.
@@ -80,3 +81,5 @@ jobs:
           # not conform RFC 3986.
           uv pip install 'jsonschema[format]' check-jsonschema --upgrade
           uv run check-jsonschema --check-metaschema altair/vegalite/v6/schema/vega-lite-schema.json --disable-formats uri-reference
+      - name: Show installed versions
+        run: uv pip list
