--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
       matrix:
         python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
         required-dependencies: ["minimum", "latest"]
-    name: py ${{ matrix.python-version }} js ${{ matrix.required-dependencies }}
+    name: py ${{ matrix.python-version }} with ${{ matrix.required-dependencies }} required deps
     steps:
       - uses: actions/checkout@v5
       - name: Set up Python ${{ matrix.python-version }}
@@ -29,7 +29,7 @@ jobs:
         if: ${{ matrix.required-dependencies != 'latest' }}
         run: |
           # Keep in sync with versions in `pyproject.toml`
-          uv pip install jsonschema==3.0 narwhals==1.27.1 typing_extensions==4.10.0
+          uv pip install jsonschema==3.0 narwhals==1.27.1 typing_extensions==4.11.0
       - name: Maybe uninstall optional dependencies
         # We uninstall pyarrow and vegafusion for one job to test that we have not
         # accidentally introduced a hard dependency on these libraries.
