--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,12 +21,13 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install uv
         uses: astral-sh/setup-uv@v6
+      # Install dependencies from pyproject.toml (latest versions for all matrix jobs)
       - name: Install dependencies
         run: uv pip install -e ".[dev, all]"
 
-      - name: Install specific jsonschema
-        # Only have to execute this if we don't want the latest jsonschema version
-        if: ${{ matrix.required-dependencies != 'latest' }}
+      # Install minimum required versions for compatibility testing (only for 'minimum' matrix value)
+      - name: Pin minimum dependency versions
+        if: ${{ matrix.required-dependencies == 'minimum' }}
         run: |
           # Keep in sync with versions in `pyproject.toml`
           uv pip install jsonschema==3.0 narwhals==1.27.1 typing_extensions==4.12.0
